# signbench

./: .gitignore  Makefile  PROJECT_PLAN.md  README.md  bottleneck.md  main.py  pyproject.toml
analysis/comparison/: final_table.md
analysis/plain_cnn/: classification_report.txt  metrics.json  per_class.json  training_history.json
analysis/rf_hog/: classification_report.txt  metrics.json  per_class.json  training_history.json
analysis/stn_cnn/: classification_report.txt  metrics.json  per_class.json  training_history.json
analysis/taiwan/: predictions.csv  summary.txt
data/taiwan/: labels.csv
report/: .gitignore  Makefile  main.tex  references.bib
scripts/: smoke_data_loader.py  visualize_stn.py
src/: __init__.py
src/common/: __init__.py  class_names.py  data_loader.py  evaluate.py  interfaces.py  preprocess.py  taiwan_loader.py
src/methods/: __init__.py  registry.py
src/methods/plain_cnn/: __init__.py  config.py  model.py
src/methods/rf_hog/: __init__.py  config.py  model.py
src/methods/stn_cnn/: __init__.py  color_transform.py  config.py  model.py  stn_layer.py
src/runners/: __init__.py  eval_gtsrb.py  eval_taiwan.py  report.py  train.py
